--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   sqflite: ^2.0.3+1
   path: ^1.8.1
   path_provider: ^2.0.11
+  http: ^0.13.5
+  firebase_core: ^2.3.0
+  cloud_firestore: ^4.0.5
 
 dev_dependencies:
   flutter_test:
